<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" 
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true"
    
    >

    <include
        android:id="@+id/mainTitle"
        layout="@layout/titlebar_back" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"            
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/name_label"
                android:textColor="#000" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:hint="@string/name_label" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/customer_number"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/customer_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:hint="@string/customer_number" />

            <Button
                android:id="@+id/rate_app_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:text="@string/rate_app"
                android:textColor="#375389"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/email_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:text="@string/sent_email"
                android:textColor="#375389"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/gift_app_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:text="@string/gift_app"
                android:textColor="#375389"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/like_on_fb_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:text="@string/like_on_fb"
                android:textColor="#375389"
                android:textSize="18sp"
                android:textStyle="bold" />

        <WebView
                android:id="@+id/reference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>